<resources>
    <string name="app_name">Flat</string>
    <string name="button_f">F</string>
    <string name="button_l">L</string>
    <string name="button_a">A</string>
    <string name="button_t">T</string>

    <string name="title_activity_main" translatable="false">Main</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="button_play">Play</string>
    <string name="button_settings">Settings</string>
    <string name="button_records">Records</string>

    <string name="title_activity_select_level" translatable="false">SelectLevel</string>
    <string name="button_normal">Normal</string>
    <string name="button_hard">Hard</string>
    <string name="button_hardcore">Hardcore</string>
    <string name="button_ysnp">You shall not pass</string>

    <string name="title_activity_game" translatable="false">Game</string>
    <string name="win">You win</string>
    <string name="lose">You lose</string>

    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="lang">Language</string>
    <string name="ua">Ukrainian</string>
    <string name="en">English</string>
    <string name="theme">Theme</string>
    <string name="def">Default</string>
    <string name="alt">Alternative</string>
    <string name="mode">Mode</string>
    <string name="normal">Normal</string>
    <string name="timer">Timer</string>

    <string name="title_activity_records">Records</string>

    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tap_me">Tap me</string>
    <string name="tutorial">The cubes are painted on four sides in the colors indicated in the title. After clicking on them, they change their color to the other in the order shown in the title. But in a special way. There are three types of clicks. The first click changes the color of the cube you clicked on. The second click changes the color of four around the cubus. A third click changes the color of the four cubes lying through one from the cube you clicked on. After that, the cycle repeats itself. The task of the game is to paint all the cubes in the background color for the minimum number of moves.</string>
    <string name="enjoy">Enjoy it</string>
</resources>
