<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    tools:context="com.example.johnbox.flat.SelectLevel">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_f" />

            <Button
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_l" />

            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_a" />

            <Button
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_t" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startGameActivity"
                android:tag="6"
                android:text="@string/button_normal"
                android:textColor="@color/text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startGameActivity"
                android:tag="7"
                android:text="@string/button_hard"
                android:textColor="@color/text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/hardcore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startGameActivity"
                android:tag="8"
                android:text="@string/button_hardcore"
                android:textColor="@color/text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ysnp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startGameActivity"
                android:tag="9"
                android:text="@string/button_ysnp"
                android:textColor="@color/text"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
