<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    tools:context="com.example.johnbox.flat.Settings">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_f" />

            <Button
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_l" />

            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_a" />

            <Button
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/button_t" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sound_vibration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:enabled="true"
                    android:onClick="onSoundClick"
                    android:text="@string/sound"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/vibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onVibrationClick"
                    android:text="@string/vibration"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onEnLandClick"
                    android:text="@string/en"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/ua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onUaLangClick"
                    android:text="@string/ua"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onDefThemeClick"
                    android:text="@string/def"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/alt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onAltThemeClick"
                    android:text="@string/alt"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onNormalModeClick"
                    android:text="@string/normal"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onTimerModeClick"
                    android:text="@string/timer"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
